--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-    "name": "BE-2-BANDUNG-32",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "start": "node app.js",
-      "start:dev": "nodemon app.js",
-      "init:env": "cp .env.example >> .env"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "dotenv": "^16.3.1"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1"
-    }
+  "name": "capstone-be",
+  "version": "1.0.0",
+  "description": "Capstone project by Group32",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
+  },
+  "keywords": [
+    "express",
+    "prisma",
+    "mysql"
+  ],
+  "author": "Group32",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5"
   }
-  
+}
